tests/paczka1/small_fuzzy/67517939.err
Error in line 3: h7C S826 71,47
Error in line 10: 6C8Eb7UOP S754 13,9
